--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <!-- Шапка сайта -->
-    <header class="page-header">
+    <header class="page-header header-line">
       <div class="container header">
         <nav class="site-nav">
           <a href="./index.html" class="logo link">
